--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -14,9 +15,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
+    "react-redux": "^7.2.4",
     "react-resizable": "^1.11.1",
     "react-rnd": "^10.2.4",
     "react-scripts": "4.0.3",
+    "react-use-websocket": "^2.6.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -47,5 +50,6 @@
   "devDependencies": {
     "@types/react-resizable": "^1.7.2",
     "prettier": "^2.2.1"
-  }
+  },
+  "proxy": "https://cf-post-it.opi.workers.dev"
 }
