--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-use-websocket": "^2.6.1",
     "typescript": "^4.2.4",
+    "use-debounce": "^6.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
